test: Add test to validate implementation results

--- a/neural_network/GRU.ipynb
+++ b/neural_network/GRU.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
       "Trainable params: 534,936\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "bias initializer: HeNormal\n",
+      "bias initializer: HeUniform\n",
       "reset_after: False\n",
       "# of params: 164736\n",
       "_________________________________________________________________\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "TensorShape([5533, 20, 128])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +412,91 @@
    "source": [
     "plt.hist(X.flatten(), bins=30)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bias initializer: RandomUniform\n",
+      "reset_after: False\n",
+      "# of params: 164736\n",
+      "_________________________________________________________________\n",
+      "t=00, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=01, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=02, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=03, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=04, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=05, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=06, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=07, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=08, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=09, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=10, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=11, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=12, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=13, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=14, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=15, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=16, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=17, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=18, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=19, validation of hidden state, same with keras: True , MaxE: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "gru_valid_2 = GRU_implement(gru)\n",
+    "gru_valid_2.validate(X_tf, hidden_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bias initializer: Zeros\n",
+      "reset_after: True\n",
+      "# of params: 165120\n",
+      "_________________________________________________________________\n",
+      "t=00, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=01, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=02, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=03, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=04, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=05, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=06, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=07, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=08, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=09, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=10, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=11, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=12, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=13, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=14, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=15, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=16, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=17, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=18, validation of hidden state, same with keras: True , MaxE: 0.0\n",
+      "t=19, validation of hidden state, same with keras: True , MaxE: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "gru = GRU(hidden_states,  return_sequences=True, return_state=True, input_shape= (max_len, embedding_dim), )\n",
+    "hidden_state, last_state, = gru(X)\n",
+    "\n",
+    "gru_valid_3 = GRU_implement(gru)\n",
+    "gru_valid_3.validate(X_tf, hidden_state)"
    ]
   },
   {
