--- a/neural_network/Optimization.ipynb
+++ b/neural_network/Optimization.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable"
+    "# from mpl_toolkits.axes_grid1 import make_axes_locatable"
    ]
   },
   {
