feat: Change code to upgrade numpy

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade numpy==1.20.0"
+    "# !pip install --user numpy==1.20.0"
    ]
   },
   {
