--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -2,16 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install --user numpy==1.20.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,45 +20,48 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv1D, GlobalMaxPooling1D, Dense, LSTM, SimpleRNN, Bidirectional, Embedding\n",
+    "from tensorflow.keras.layers import Conv1D, GlobalMaxPooling1D, Dense, Conv2D, Embedding\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.losses import BinaryCrossentropy\n",
     "from tensorflow.keras.initializers import GlorotNormal, GlorotUniform, Zeros\n",
-    "from tensorflow.keras import backend as K"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 268,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_samples = 6000\n",
-    "max_len = 50\n",
-    "vocab_size = 1234\n",
-    "embedding_dim = 100\n",
+    "from tensorflow.keras import backend as K\n",
     "\n",
-    "kernel_size = 3\n",
-    "n_filters = 64"
+    "from tensorflow.image import extract_patches\n",
+    "import tensorflow_text as tft"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example 1: with embedding layer"
+    "# Conv1D with embedding layer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_samples = 10000\n",
+    "max_len = 50\n",
+    "vocab_size = 1234\n",
+    "embedding_dim = 500\n",
+    "\n",
+    "kernel_size = 3\n",
+    "n_filters = 64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.09142708778381348\n"
+      "running time: 0.6240003108978271\n"
      ]
     }
    ],
@@ -90,23 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_13\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
+      " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_13 (Embedding)     (None, 50, 100)           123400    \n",
-      "_________________________________________________________________\n",
-      "conv1d_13 (Conv1D)           (None, 48, 64)            19264     \n",
+      " embedding_2 (Embedding)     (None, 50, 500)           617000    \n",
+      "                                                                 \n",
+      " conv1d_2 (Conv1D)           (None, 48, 64)            96064     \n",
+      "                                                                 \n",
       "=================================================================\n",
-      "Total params: 142,664\n",
-      "Trainable params: 142,664\n",
+      "Total params: 713,064\n",
+      "Trainable params: 713,064\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -118,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,11 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_emb_ = copy.deepcopy(X_emb.numpy())"
+    "# X_emb_ = copy.deepcopy(X_emb.numpy())"
    ]
   },
   {
@@ -217,26 +212,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## implementation: with numpy functions"
+    "## implementation: with numpy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([10000, 50, 500])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_emb.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.6424896717071533\n"
+      "20.20397400856018\n"
      ]
     }
    ],
    "source": [
     "st=time.time()\n",
-    "X_emb_sld = sliding_window_view(X_emb_, window_shape=cnn.kernel.shape[:2], axis=(1,2))\n",
-    "result = np.einsum('abijk,jkc->abc', X_emb_sld, cnn.kernel.numpy())\n",
+    "X_emb_sld = sliding_window_view(X_emb, window_shape=cnn.kernel.shape[:2], axis=(1,2))\n",
+    "X_emb_sld = tf.cast(X_emb_sld, tf.float32)\n",
+    "result = tf.einsum('abijk,jkc->abc', X_emb_sld, cnn.kernel)\n",
     "\n",
     "et=time.time()\n",
     "print(et-st)"
@@ -244,7 +260,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([10000, 48, 1, 3, 500])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_emb_sld.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0047667026519775\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=time.time()\n",
+    "X_emb_sld = sliding_window_view(X_emb, window_shape=cnn.kernel.shape[:2], axis=(1,2))\n",
+    "X_emb_sld_flt = X_emb_sld.reshape(n_samples,output_axis1,1,-1,)\n",
+    "kernel_flt = tf.reshape(cnn.kernel, [-1, n_filters] )\n",
+    "result = tf.einsum('aijk,kl->ail', X_emb_sld_flt, kernel_flt)\n",
+    "\n",
+    "et=time.time()\n",
+    "print(et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -256,35 +316,34 @@
     }
    ],
    "source": [
-    "print('Validation:', np.allclose(result, hidden_state.numpy(), atol=5e-8))"
+    "print('Validation:', np.alltrue(result == hidden_state))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## implementation: with numpy functions & flattening kernels"
+    "## implementation: with tensorflow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.6195778846740723\n"
+      "1.912224292755127\n"
      ]
     }
    ],
    "source": [
     "st=time.time()\n",
-    "X_emb_sld = sliding_window_view(X_emb_, window_shape=cnn.kernel.shape[:2], axis=(1,2))\n",
-    "X_emb_sld_flt = X_emb_sld.reshape(n_samples,output_axis1,1,-1,)\n",
-    "kernel_flt = cnn.kernel.numpy().reshape(-1, n_filters )\n",
-    "result = np.einsum('aijk,kl->ail', X_emb_sld_flt, kernel_flt)\n",
+    "X_emb_sld = tft.sliding_window(X_emb, kernel_size, axis=1)\n",
+    "\n",
+    "result = tf.einsum('abjk,jkc->abc', X_emb_sld, cnn.kernel)\n",
     "\n",
     "et=time.time()\n",
     "print(et-st)"
@@ -292,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +363,185 @@
     }
    ],
    "source": [
-    "print('Validation:', np.allclose(result, hidden_state.numpy(), atol=5e-8))"
+    "print('Validation:', np.alltrue(result == hidden_state))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9849357604980469\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=time.time()\n",
+    "X_emb_sld = tft.sliding_window(X_emb, kernel_size, axis=1)\n",
+    "X_emb_sld_flt = tf.reshape(X_emb_sld, [X_emb_sld.shape[0], X_emb_sld.shape[1], -1,])\n",
+    "kernel_flt = tf.reshape(cnn.kernel, [-1, n_filters] )\n",
+    "result = tf.einsum('aik,kl->ail', X_emb_sld_flt, kernel_flt)\n",
+    "\n",
+    "et=time.time()\n",
+    "print(et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Validation:', np.alltrue(result == hidden_state ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conv2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_samples = 1000\n",
+    "image_size = (256, 256)\n",
+    "num_channels = 3\n",
+    "\n",
+    "kernel_size = (3, 3)\n",
+    "strides = 2\n",
+    "n_filters = 64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = np.random.default_rng(42)\n",
+    "X = rng.integers(0, 256, size=(num_samples,)+image_size+(num_channels,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = tf.cast(X, tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running time: 17.991370916366577\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Conv2D(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='valid' ) )\n",
+    "X_ = model(X)\n",
+    "\n",
+    "et = time.time()\n",
+    "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 127, 127, 64)      1792      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,792\n",
+      "Trainable params: 1,792\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running time: 4.977347373962402\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "cnn = model.layers[0]\n",
+    "ep = extract_patches(X, sizes= [1]+cnn.kernel.shape[:2]+[1], strides=[1, strides, strides, 1], rates = [1,1,1,1], padding = 'VALID' )\n",
+    "kf = tf.reshape(cnn.kernel, [-1, 64])\n",
+    "\n",
+    "result = tf.einsum('abci,id->abcd', ep, kf)\n",
+    "\n",
+    "et = time.time()\n",
+    "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(result == X_)"
    ]
   },
   {
