--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,14 +450,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 17.991370916366577\n"
+      "running time: 25.322094440460205\n"
      ]
     }
    ],
@@ -474,18 +474,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 127, 127, 64)      1792      \n",
+      " conv2d_3 (Conv2D)           (None, 127, 127, 64)      1792      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,792\n",
@@ -501,20 +501,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn = model.layers[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 4.977347373962402\n"
+      "# of params: 1792\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('# of params:', cnn.count_params())\n",
+    "cnn.count_params() == np.product(cnn.kernel.shape, axis=0) + cnn.bias.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of feature map: (127, 127)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('shape of feature map:',cnn.output_shape[1:3])\n",
+    "cnn.output_shape[1:3] == (int((image_size[0] - kernel_size[0])/strides + 1), int((image_size[1] - kernel_size[1])/strides + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running time: 12.900575160980225\n"
      ]
     }
    ],
    "source": [
     "st = time.time()\n",
-    "cnn = model.layers[0]\n",
+    "# cnn = model.layers[0]\n",
     "ep = extract_patches(X, sizes= [1]+cnn.kernel.shape[:2]+[1], strides=[1, strides, strides, 1], rates = [1,1,1,1], padding = 'VALID' )\n",
     "kf = tf.reshape(cnn.kernel, [-1, 64])\n",
     "\n",
@@ -526,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +600,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
