docs: Rearrange cells

--- a/neural_network/Backpropagation.ipynb
+++ b/neural_network/Backpropagation.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +114,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### keras model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 177,
    "metadata": {},
@@ -126,8 +133,17 @@
     "model.add(tf.keras.layers.Dense(4, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
     "model.add(tf.keras.layers.Dense(2, activation='sigmoid', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
     "\n",
-    "model_custom = tf.keras.models.clone_model(model)\n",
-    "model_custom.set_weights(model.get_weights())"
+    "Loss = BinaryCrossentropy()\n",
+    "optimizer = tf.keras.optimizers.Adagrad(learning_rate=1e-2)\n",
+    "\n",
+    "model.compile(optimizer = optimizer, loss = Loss, metrics = ['acc'], )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### custom model"
    ]
   },
   {
@@ -136,57 +152,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights_custom = copy.deepcopy(model_custom.trainable_variables)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Loss = BinaryCrossentropy()\n",
-    "optimizer = tf.keras.optimizers.Adagrad(learning_rate=1e-2)\n",
+    "model_custom = tf.keras.models.clone_model(model)\n",
+    "model_custom.set_weights(model.get_weights())\n",
+    "\n",
+    "weights_custom = copy.deepcopy(model_custom.trainable_variables)\n",
     "\n",
     "Loss_custom = copy.deepcopy(Loss)\n",
-    "optimizer_custom = copy.deepcopy(optimizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 180,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.compile(optimizer = optimizer, loss = Loss, metrics = ['acc'], )\n",
+    "optimizer_custom = copy.deepcopy(optimizer)\n",
     "\n",
     "model_custom.compile(optimizer = optimizer_custom, loss = [Loss_custom], metrics = ['acc'], )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "for iw in range(len(weights_custom)):\n",
-    "    print(\n",
-    "        np.alltrue(weights_custom[iw] == model.weights[iw]), \n",
-    "#           np.allclose(m.weights[iw], model.weights[iw]), abs(m.weights[iw] - model.weights[iw]).numpy().max()\n",
-    "    )"
    ]
   },
   {
