--- a/neural_network/Backpropagation.ipynb
+++ b/neural_network/Backpropagation.ipynb
@@ -246,6 +246,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 185,
    "metadata": {},
@@ -505,15 +512,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_model(seed):\n",
-    "    tf.random.set_seed(seed)\n",
-    "    model = Sequential()\n",
-    "    # model.add(tf.keras.layers.Dense(32, activation='relu', ))\n",
-    "    model.add(tf.keras.layers.Dense(16, activation='relu', input_shape = (num_features,), kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1)))\n",
-    "    model.add(tf.keras.layers.Dense(4, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
-    "    model.add(tf.keras.layers.Dense(2, activation='sigmoid', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
+    "# def create_model(seed):\n",
+    "#     tf.random.set_seed(seed)\n",
+    "#     model = Sequential()\n",
     "    \n",
-    "    return model"
+    "#     model.add(tf.keras.layers.Dense(16, activation='relu', input_shape = (num_features,), kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1)))\n",
+    "#     model.add(tf.keras.layers.Dense(4, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
+    "#     model.add(tf.keras.layers.Dense(2, activation='sigmoid', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
+    "    \n",
+    "#     return model"
    ]
   },
   {
@@ -927,6 +934,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
   },
+  "toc-autonumbering": true,
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
