refactor: Group all layers into a list

--- a/neural_network/Backpropagation.ipynb
+++ b/neural_network/Backpropagation.ipynb
@@ -85,11 +85,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "seed = 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layers = [\n",
+    "    tf.keras.layers.Dense(16, activation='relu', input_shape = (num_features,), kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1)),\n",
+    "    tf.keras.layers.Dense(4, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ),\n",
+    "    tf.keras.layers.Dense(2, activation='sigmoid', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ),\n",
+    "]\n",
+    "\n",
+    "layers_clone = copy.deepcopy(layers)"
    ]
   },
   {
@@ -122,16 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "tf.random.set_seed(seed)\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(tf.keras.layers.Dense(16, activation='relu', input_shape = (num_features,), kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1)))\n",
-    "model.add(tf.keras.layers.Dense(4, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
-    "model.add(tf.keras.layers.Dense(2, activation='sigmoid', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
+    "for layer in layers_clone:\n",
+    "    model.add(layer)\n",
     "\n",
     "Loss = BinaryCrossentropy()\n",
     "optimizer = tf.keras.optimizers.Adagrad(learning_rate=1e-2)\n",
@@ -148,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -220,23 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15/15 [==============================] - 0s 1ms/step - loss: 0.7721 - acc: 0.3187\n"
+      "15/15 [==============================] - 0s 2ms/step - loss: 0.7721 - acc: 0.3187\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1a3ef472280>"
+       "<keras.callbacks.History at 0x2067c89d580>"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,12 +263,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparison"
+    "### comparison"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,18 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# h = (tf.sqrt(optimizer.weights[nth_layer+1])  + optimizer.epsilon   ) \n",
-    "# pred = w[nth_layer] - ((optimizer.learning_rate * grad[nth_layer])/h)    \n",
-    "# # pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +389,7 @@
        "(array([False,  True]), array([436,  44], dtype=int64))"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,8 +459,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### custom model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,16 +501,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_model(seed):\n",
+    "def create_model(layers, seed):\n",
     "    tf.random.set_seed(seed)\n",
     "    inputs = tf.keras.Input(shape=(num_features,))\n",
-    "    x = tf.keras.layers.Dense(16, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1))(inputs)\n",
-    "    x = tf.keras.layers.Dense(4, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) )(x)\n",
-    "    x = tf.keras.layers.Dense(2, activation='sigmoid', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) )(x)\n",
+    "    for layer_index, layer in enumerate(layers):\n",
+    "        if layer_index == 0:\n",
+    "            x = layer(inputs)\n",
+    "        else:\n",
+    "            x = layer(x)\n",
+    "#     x = tf.keras.layers.Dense(16, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1))(inputs)\n",
+    "#     x = tf.keras.layers.Dense(4, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) )(x)\n",
+    "#     x = tf.keras.layers.Dense(2, activation='sigmoid', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) )(x)\n",
     "    model_ = CustomModel(inputs, x)\n",
     "    \n",
     "    return model_"
@@ -525,7 +540,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer_clone = copy.deepcopy(layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,12 +572,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "with strategy.scope():\n",
-    "    model_custom1 = create_model(seed)\n",
+    "    model_custom1 = create_model(layer_clone, seed)\n",
     "    weights_custom1 = copy.deepcopy(model_custom1.trainable_variables)\n",
     "\n",
     "    optimizer_custom1 = tf.keras.optimizers.Adagrad(1e-2)\n",
@@ -598,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -666,50 +690,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 150,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
    "source": [
-    "for iw in range(len(model.weights)):\n",
-    "    print(np.alltrue(model.weights[iw] == model_custom1.weights[iw]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([ True]), array([1], dtype=int64))\n",
-      "(array([ True]), array([480], dtype=int64))\n",
-      "(array([ True]), array([16], dtype=int64))\n",
-      "(array([ True]), array([64], dtype=int64))\n",
-      "(array([ True]), array([4], dtype=int64))\n",
-      "(array([ True]), array([8], dtype=int64))\n",
-      "(array([ True]), array([2], dtype=int64))\n"
-     ]
-    }
-   ],
-   "source": [
-    "for iow in range(len(model.optimizer.weights)):\n",
-    "    print(np.unique((model.optimizer.weights[iow] == model_custom1.optimizer.weights[iow]), return_counts=True))"
+    "### keras model"
    ]
   },
   {
@@ -721,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -764,11 +748,11 @@
    ],
    "source": [
     "tf.random.set_seed(seed)\n",
+    "layer_clone = copy.deepcopy(layers)\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(tf.keras.layers.Dense(16, activation='relu', input_shape = (num_features,), kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1)))\n",
-    "model.add(tf.keras.layers.Dense(4, activation='relu', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
-    "model.add(tf.keras.layers.Dense(2, activation='sigmoid', kernel_initializer = tf.keras.initializers.GlorotNormal(seed=1) ))\n",
+    "for layer in layer_clone:\n",
+    "    model.add(layer)\n",
     "\n",
     "Loss = BinaryCrossentropy()\n",
     "optimizer = tf.keras.optimizers.Adagrad(learning_rate=1e-2)\n",
@@ -864,6 +848,60 @@
     "                    end_step = step + data_handler.step_increment\n",
     "                    callbacks.on_train_batch_end(end_step, logs)\n",
     "                    if model.stop_training:break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for iw in range(len(model.weights)):\n",
+    "    print(np.alltrue(model.weights[iw] == model_custom1.weights[iw]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ True]), array([1], dtype=int64))\n",
+      "(array([ True]), array([480], dtype=int64))\n",
+      "(array([ True]), array([16], dtype=int64))\n",
+      "(array([ True]), array([64], dtype=int64))\n",
+      "(array([ True]), array([4], dtype=int64))\n",
+      "(array([ True]), array([8], dtype=int64))\n",
+      "(array([ True]), array([2], dtype=int64))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for iow in range(len(model.optimizer.weights)):\n",
+    "    print(np.unique((model.optimizer.weights[iow] == model_custom1.optimizer.weights[iow]), return_counts=True))"
    ]
   },
   {
