docs: Update cells

--- a/neural_network/Backpropagation.ipynb
+++ b/neural_network/Backpropagation.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -234,23 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15/15 [==============================] - 0s 2ms/step - loss: 0.7721 - acc: 0.3187\n"
+      "15/15 [==============================] - 0s 1ms/step - loss: 0.7721 - acc: 0.3187\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2067c89d580>"
+       "<keras.callbacks.History at 0x28bd0cb4550>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,6 +489,7 @@
     "        gradients = tape.gradient(loss, trainable_vars)\n",
     "        # Update weights\n",
     "        self.optimizer.apply_gradients(zip(gradients, trainable_vars))\n",
+    "        print('..')\n",
     "        \n",
     "#         opt_wei.append(self.optimizer.weights)\n",
     "#         grads.append(gradients)\n",
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,13 +623,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "..\n",
+      "..\n",
       "  Batch: 000, loss: 0.8209180235862732, acc: 0.375\n",
       "  Batch: 001, loss: 0.900952935218811, acc: 0.328125\n",
       "  Batch: 002, loss: 0.8808948993682861, acc: 0.3229166567325592\n",
@@ -705,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -713,36 +716,36 @@
      "output_type": "stream",
      "text": [
       "epoch 0\n",
-      "step 0\n",
-      "0.820918 0.375\n",
-      " 1/15 [=>............................] - ETA: 2s - loss: 0.8209 - acc: 0.3750step 1\n",
-      "0.90095294 0.328125\n",
-      "step 2\n",
-      "0.8808949 0.32291666\n",
-      "step 3\n",
-      "0.88598275 0.3125\n",
-      "step 4\n",
-      "0.88206846 0.33125\n",
-      "step 5\n",
-      "0.8725509 0.33854166\n",
-      "step 6\n",
-      "0.8528722 0.35267857\n",
-      "step 7\n",
-      "0.8475879 0.35546875\n",
-      "step 8\n",
-      "0.8376209 0.35416666\n",
-      "step 9\n",
-      "0.8294331 0.35625\n",
-      "step 10\n",
-      "0.81927145 0.375\n",
-      "step 11\n",
-      "0.81701773 0.38541666\n",
-      "step 12\n",
-      "0.8129315 0.39423078\n",
-      "step 13\n",
-      "0.80978376 0.38839287\n",
-      "step 14\n",
-      "0.80981433 0.389011\n"
+      "\n",
+      " step: 0 loss, acc: 0.820918 0.375\n",
+      " 1/15 [=>............................] - ETA: 2s - loss: 0.8209 - acc: 0.3750\n",
+      " step: 1 loss, acc: 0.90095294 0.328125\n",
+      "\n",
+      " step: 2 loss, acc: 0.8808949 0.32291666\n",
+      "\n",
+      " step: 3 loss, acc: 0.88598275 0.3125\n",
+      "\n",
+      " step: 4 loss, acc: 0.88206846 0.33125\n",
+      "\n",
+      " step: 5 loss, acc: 0.8725509 0.33854166\n",
+      "\n",
+      " step: 6 loss, acc: 0.8528722 0.35267857\n",
+      "\n",
+      " step: 7 loss, acc: 0.8475879 0.35546875\n",
+      "\n",
+      " step: 8 loss, acc: 0.8376209 0.35416666\n",
+      "\n",
+      " step: 9 loss, acc: 0.8294331 0.35625\n",
+      "\n",
+      " step: 10 loss, acc: 0.81927145 0.375\n",
+      "\n",
+      " step: 11 loss, acc: 0.81701773 0.38541666\n",
+      "\n",
+      " step: 12 loss, acc: 0.8129315 0.39423078\n",
+      "\n",
+      " step: 13 loss, acc: 0.80978376 0.38839287\n",
+      "\n",
+      " step: 14 loss, acc: 0.80981433 0.389011\n"
      ]
     }
    ],
@@ -828,8 +831,6 @@
     "        callbacks.on_epoch_begin(epoch)\n",
     "        with data_handler.catch_stop_iteration():\n",
     "            for step in data_handler.steps():\n",
-    "        \n",
-    "                print('step',step)\n",
     "                with trace.Trace(\n",
     "                    'train',\n",
     "                    epoch_num=epoch,\n",
@@ -841,7 +842,7 @@
     "#           print(len(list(copy1)))\n",
     "                    callbacks.on_train_batch_begin(step)\n",
     "                    tmp_logs = model.train_function(iterator)\n",
-    "                    print(tmp_logs['loss'].numpy(), tmp_logs['acc'].numpy())\n",
+    "                    print('\\n step:',step,'loss, acc:', tmp_logs['loss'].numpy(), tmp_logs['acc'].numpy())\n",
     "            \n",
     "                    if data_handler.should_sync: context.async_wait()\n",
     "                    logs = tmp_logs  # No error, now safe to assign to logs.\n",
@@ -859,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
