docs: Remove an unused cell

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.6240003108978271\n"
+      "running time: 1.0559544563293457\n"
      ]
     }
    ],
@@ -84,20 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_2 (Embedding)     (None, 50, 500)           617000    \n",
+      " embedding (Embedding)       (None, 50, 500)           617000    \n",
       "                                                                 \n",
-      " conv1d_2 (Conv1D)           (None, 48, 64)            96064     \n",
+      " conv1d (Conv1D)             (None, 48, 64)            96064     \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 713,064\n",
@@ -127,15 +127,6 @@
    "source": [
     "output_axis1 = int((max_len-kernel_size)/cnn.strides[0] +1)\n",
     "print(output_axis1 == cnn.output_shape[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X_emb_ = copy.deepcopy(X_emb.numpy())"
    ]
   },
   {
@@ -173,6 +164,8 @@
     }
    ],
    "source": [
+    "X_emb_ = copy.deepcopy(X_emb.numpy())\n",
+    "\n",
     "st=time.time()\n",
     "result_all = np.zeros((n_samples, output_axis1, n_filters))\n",
     "\n",
