docs: Add description

--- a/machine_learning/Paper implementation_PCA.ipynb
+++ b/machine_learning/Paper implementation_PCA.ipynb
@@ -46,6 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# my implementation\n",
+    "\n",
     "from packages.GramSchmidt import gram_schmidt\n",
     "from packages.SVD import svd_thin"
    ]
@@ -78,6 +80,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* dataset format\n",
+    "\n",
     "$\\large \\mathbf{X} = {\\begin{pmatrix} x_{1,1}&\\cdots&x_{1,p} \\\\ \\vdots & \\ddots &\\vdots \\\\ x_{n,1}&\\cdots&x_{n,p} \\end{pmatrix} }_{n\\times p} = {\\begin{pmatrix} X_1 & \\cdots&X_p \\end{pmatrix} }_{n\\times p}$ where $n$ is the number of samples and $p$ is the number of features."
    ]
   },
