docs: Add formula

--- a/machine_learning/Paper implementation_PCA.ipynb
+++ b/machine_learning/Paper implementation_PCA.ipynb
@@ -380,6 +380,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Principle of PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* with centered dataset $\\mathbf{X}$\n",
+    "\n",
+    "$\\large \\begin{align} Var[\\mathbf{X}\\vec{e}] &= \\frac{1}{m-1}\\sum_{i=1}^{m}[X_{i}\\vec{e}-E(X_{i}\\vec{e})]^2 \\\\\n",
+    "&= \\frac{1}{m-1}\\sum_{i=1}^{m}[X_{i}\\vec{e}-E(X_{i})\\vec{e}]^2 \\\\\n",
+    "&= \\frac{1}{m-1}\\sum_{i=1}^{m}(X_{i}\\vec{e})^2 \\\\\n",
+    "&= \\frac{1}{m-1}(\\mathbf{X}\\vec{e})^{T}(\\mathbf{X}\\vec{e}) \\\\\n",
+    "&= \\vec{e}^{T}\\left(\\frac{\\mathbf{X}^{T}\\mathbf{X}}{m-1}\\right)\\vec{e} \\\\ \n",
+    "&= \\vec{e}^{T}\\mathbf{C}\\vec{e} \\\\ \\end{align}$\n",
+    "\n",
+    "Therefore PCA is\n",
+    "\n",
+    "$\\large \\max\\vec{e}^{T}\\mathbf{C}\\vec{e} \\quad \\text{s.t.}\\ ||\\vec{e}||^{2}=1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### with EVD of covariance matrix"
    ]
   },
@@ -843,6 +868,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
   },
+  "toc-autonumbering": true,
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
