docs: Modify formula

--- a/machine_learning/Paper implementation_PCA.ipynb
+++ b/machine_learning/Paper implementation_PCA.ipynb
@@ -389,12 +389,12 @@
    "source": [
     "* with centered dataset $\\mathbf{X}$\n",
     "\n",
-    "$\\large \\begin{align} Var[\\mathbf{X}\\vec{e}] &= \\frac{1}{m-1}\\sum_{i=1}^{m}[X_{i}\\vec{e}-E(X_{i}\\vec{e})]^2 \\\\\n",
+    "$\\large \\begin{align*} Var[\\mathbf{X}\\vec{e}] &= \\frac{1}{m-1}\\sum_{i=1}^{m}[X_{i}\\vec{e}-E(X_{i}\\vec{e})]^2 \\\\\n",
     "&= \\frac{1}{m-1}\\sum_{i=1}^{m}[X_{i}\\vec{e}-E(X_{i})\\vec{e}]^2 \\\\\n",
     "&= \\frac{1}{m-1}\\sum_{i=1}^{m}(X_{i}\\vec{e})^2 \\\\\n",
     "&= \\frac{1}{m-1}(\\mathbf{X}\\vec{e})^{T}(\\mathbf{X}\\vec{e}) \\\\\n",
     "&= \\vec{e}^{T}\\left(\\frac{\\mathbf{X}^{T}\\mathbf{X}}{m-1}\\right)\\vec{e} \\\\ \n",
-    "&= \\vec{e}^{T}\\mathbf{C}\\vec{e} \\\\ \\end{align}$\n",
+    "&= \\vec{e}^{T}\\mathbf{C}\\vec{e} \\\\ \\end{align*}$\n",
     "\n",
     "Therefore PCA is\n",
     "\n",
